# omar

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  entrypoint.sh  pyproject.toml
app/: config.py  logger.py  main.py
app/assistant/: __init__.py  agent.py  helper.py  prompt.py
app/assistant/sub_agents/christian/: agent.py  prompt.py
app/assistant/sub_agents/general/: agent.py  prompt.py
app/assistant/sub_agents/muslim/: agent.py  prompt.py
app/assistant/sub_agents/philosopher/: agent.py  prompt.py
app/handler/: __init__.py  telegram.py  webhook.py
